deploy/k8s/base/scaling-miner/asset-https-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: https-443-asset
  labels:
    service: asset
spec:
  entryPoints:
    - websecure # Service port expecting HTTPS
  routes:
  - match: HostSNI(`m.scaling.ubsv.dev`)
    services:
    - name: asset-service
      port: 8090  # Service port expecting HTTP
  tls:
    certResolver: le  # Let's Encrypt resolver for SSL
